# matrix-python-common

./: CONTRIBUTING.md  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
matrix_common/: regex.py  servlet.py  versionstring.py
scripts-dev/: lint.sh
src/matrix_common/: regex.py  versionstring.py
src/matrix_common/types/: __init__.py  mxc_uri.py
tests/: test_regex.py  test_versionstring.py
tests/types/: test_mxc_uri.py
